--- a/src/app/pages/biker/biker.component.html
+++ b/src/app/pages/biker/biker.component.html
@@ -182,13 +182,9 @@
           </div>
           <div class="modal-body row">
             <button class="btn btn-outline-success col-6" data-bs-dismiss="modal" (click)="prick()">Pinchazo</button>
-            <button class="btn btn-outline-warning col-6" data-bs-dismiss="modal">Sin gasolina</button>
+            <button class="btn btn-outline-warning col-6" data-bs-dismiss="modal" (click)="singas()">Sin gasolina</button>
             <button class="btn btn-outline-dark col-6" data-bs-dismiss="modal">Asalto</button>
             <button class="btn btn-outline-danger col-6" data-bs-dismiss="modal">Accidente</button>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
           </div>
         </div>
       </div>
