--- a/src/app/pages/single-order/single-order.component.html
+++ b/src/app/pages/single-order/single-order.component.html
@@ -11,7 +11,7 @@
             <div class="col-md-12 fs-6">
                 <span class="material-icons">motorcycle</span>
                 
-                <select class=""  name="" id="biker" [(ngModel)]="bikerSelect" [disabled]="ordersStructureSingle.estado != 'procesada' && ordersStructureSingle.estado != 'emergencia'">
+                <select class=""  name="" id="biker" [(ngModel)]="bikerSelect" [disabled]="((ordersStructureSingle.estado != 'procesada') && (ordersStructureSingle.estado != 'emergencia'))">
                     <option>Seleccione Motorista</option>
                     <option *ngFor="let biker of BikerAvailable" [ngClass]="biker.nDelivered > 0?'text-danger fw-bold':''" [value]="biker.id">{{biker.countName}} </option>
                 </select>
