--- a/src/app/pages/count-down/count-down.component.html
+++ b/src/app/pages/count-down/count-down.component.html
@@ -1,7 +1,10 @@
-<div class="timer">
+<!--div class="timer">
     <h4> Count down timer </h4>
     <span id="days"> {{daysToDday}} </span>Day(s)
     <span id="hours"> {{hoursToDday}} </span>Hrs 
     <span id="minutes"> {{minutesToDday}} </span>Min
     <span id="seconds"> {{secondsToDday}} </span>S
+</div-->
+<div>
+    {{daysToDday}}:{{hoursToDday}}:{{minutesToDday}}:{{secondsToDday}}
 </div>
