variable de session arreglada

--- a/src/app/pages/biker/biker.component.html
+++ b/src/app/pages/biker/biker.component.html
@@ -183,8 +183,8 @@
           <div class="modal-body row">
             <button class="btn btn-outline-success col-6" data-bs-dismiss="modal" (click)="prick()">Pinchazo</button>
             <button class="btn btn-outline-warning col-6" data-bs-dismiss="modal" (click)="singas()">Sin gasolina</button>
-            <button class="btn btn-outline-dark col-6" data-bs-dismiss="modal">Asalto</button>
-            <button class="btn btn-outline-danger col-6" data-bs-dismiss="modal">Accidente</button>
+            <button class="btn btn-outline-dark col-6" data-bs-dismiss="modal" (click)="robber()">Asalto</button>
+            <button class="btn btn-outline-danger col-6" data-bs-dismiss="modal" (click)="injury()">Accidente</button>
           </div>
         </div>
       </div>
