--- a/src/app/pages/navsm/navsm.component.html
+++ b/src/app/pages/navsm/navsm.component.html
@@ -7,7 +7,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent" *ngIf="userInfo !==404">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item" *ngIf="userType ===2">
-            <a class="nav-link active" aria-current="page" routerLink="/asignacion">Asignación</a>
+            <a class="nav-link active" aria-current="page" routerLink="/asignacion">Bikers</a>
+          </li>
+          <li class="nav-item" *ngIf="userType ===1">
+            <a class="nav-link active" aria-current="page" routerLink="/coordinacion">Coordinadores</a>
           </li>
           <li class="nav-item" *ngIf="userType ===2">
             <a class="nav-link active" aria-current="page" routerLink="/pedidos">Ordenes</a>
@@ -15,11 +18,15 @@
           <li class="nav-item" *ngIf="userType ===3">
             <a class="nav-link" routerLink="/biker">Biker</a>
           </li>
-          <li class="nav-item" *ngIf="userType >0">
-            <a class="nav-link" routerLink="/login">Logout</a>
+          <li class="nav-item align-end" *ngIf="userType >0">
+            
           </li>
           
         </ul>
+        <div *ngIf="userType > 0">
+          <a class="material-icons text-white fs-3"  routerLink="/login">logout</a>
+        </div>
+        
       </div>
     </div>
   </nav>
