--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -2,15 +2,15 @@
   <div class="container">
     <div class="card card-user">
       <div class="card-header">
-        <h5 class="card-title">Edit Profile</h5>
+        <h5 class="card-title">Registro de Usuarios</h5>
       </div>
       <div class="card-body">
-        <form>
+        <form #f="ngForm" (ngSubmit)="onSubmit(f)">
           <div class="row">
             <div class="col-md-5 pr-1">
               <div class="form-group">
                 <label>Empresa</label>
-                <select class="form-control" aria-label="Default select example">
+                <select class="form-control"   aria-label="Default select example" name="empresa" ngModel required #empresa="ngModel">
                     <option selected>Seleccionar Empresa</option>
                     <option value="1">San Martín</option>
                     <option value="2">Empresa 1</option>
@@ -18,72 +18,82 @@
                   </select>
               </div>
             </div>
-            <div class="col-md-3 px-1">
+            <div class="col-md-7 pl-1">
               <div class="form-group">
-                <label>Username</label>
-                <input type="text" class="form-control" placeholder="Username" value="michael23">
-              </div>
-            </div>
-            <div class="col-md-4 pl-1">
-              <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" placeholder="Email">
+                <label for="exampleInputEmail1">Correo electronico</label>
+                <input type="email" class="form-control"  placeholder="Email" name="correo" ngModel required #correo="ngModel">
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-md-6 pr-1">
               <div class="form-group">
-                <label>First Name</label>
-                <input type="text" class="form-control" placeholder="Company" value="Chet">
+                <label>Nombres</label>
+                <input type="text" name="nombres" class="form-control"  placeholder="Nombres" value="" ngModel required #nombres="ngModel">
               </div>
             </div>
             <div class="col-md-6 pl-1">
               <div class="form-group">
-                <label>Last Name</label>
-                <input type="text" class="form-control" placeholder="Last Name" value="Faker">
+                <label>Apellidos</label>
+                <input type="text" class="form-control" name="apellidos"  placeholder="Apellidos" value="" ngModel required #apellidos="ngModel">
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-3 pr-1">
               <div class="form-group">
-                <label>Address</label>
-                <input type="text" class="form-control" placeholder="Home Address" value="Melbourne, Australia">
+                <label>Codigo</label>
+                <input type="text" class="form-control" placeholder="Ingrese código"  name="codigo" value="" ngModel required #codigo="ngModel">
+              </div>
+            </div>
+            <div class="col-md-3 pr-1">
+              <div class="form-group">
+                <label>Dpi</label>
+                <input type="text" class="form-control" placeholder="Ingrese dpi"  name="dpi" value="" ngModel required #dpi="ngModel">
+              </div>
+            </div>
+            <div class="col-md-3 px-1">
+              <div class="form-group">
+                <label>Tipo usuario</label>
+                <select class="form-control" aria-label="Default select example" name="tipo" ngModel required #tipo="ngModel">
+                    <option selected>Seleccionar tipo</option>
+                    <option value="1">Administrador</option>
+                    <option value="2">Coordinador</option>
+                    <option value="3">Biker</option>
+                  </select>
+              </div>
+            </div>
+            <div class="col-md-3 pl-1">
+              <div class="form-group">
+                <label>Tienda</label>
+                <select class="form-control" aria-label="Default select example" name="tienda" ngModel required #tienda="ngModel">
+                    <option selected>tienda</option>
+                    <option value="1">Petapa</option>
+                    <option value="2">San Cristobal Mix</option>
+                    <option value="3">Miraflores</option>
+                  </select>
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-4 pr-1">
+            <div class="col-md-6 pr-1">
               <div class="form-group">
-                <label>City</label>
-                <input type="text" class="form-control" placeholder="City" value="Melbourne">
+                <label>Contraseña</label>
+                <input type="password" name="password" class="form-control" value="" ngModel required #password="ngModel">
+                <p>{{textp1}}</p>
               </div>
             </div>
-            <div class="col-md-4 px-1">
+            <div class="col-md-6 pl-1">
               <div class="form-group">
-                <label>Country</label>
-                <input type="text" class="form-control" placeholder="Country" value="Australia">
-              </div>
-            </div>
-            <div class="col-md-4 pl-1">
-              <div class="form-group">
-                <label>Postal Code</label>
-                <input type="number" class="form-control" placeholder="ZIP Code">
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-12">
-              <div class="form-group">
-                <label>About Me</label>
-                <textarea class="form-control textarea">Oh so, your weak rhyme You doubt I'll bother, reading into it</textarea>
+                <label>Repita contraseña</label>
+                <input type="password" class="form-control" name="pass2" value="" ngModel required #pass2="ngModel">
+                <p>{{textp2}}</p>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="update ml-auto mr-auto">
-              <button type="submit" class="btn btn-primary btn-round">Update Profile</button>
+              <button type="submit" class="btn btn-primary btn-round">Crear Usuario</button>
             </div>
           </div>
         </form>
