--- a/src/app/pages/biker/biker.component.html
+++ b/src/app/pages/biker/biker.component.html
@@ -144,7 +144,7 @@
                                             </td>
                                             <td>
                                                 <div class="fs-6 text-center">
-                                                    Q {{masterSingle.totalprd}}
+                                                     {{masterSingle.total}}
                                                 </div>
                                                 
                                                 <div *ngIf="masterSingle.items && masterSingle.items.length > 0">
