added contdown and count in orders

--- a/src/app/pages/count-down/count-down.component.html
+++ b/src/app/pages/count-down/count-down.component.html
@@ -6,5 +6,5 @@
     <span id="seconds"> {{secondsToDday}} </span>S
 </div-->
 <div>
-    {{daysToDday}}:{{hoursToDday}}:{{minutesToDday}}:{{secondsToDday}}
+    {{daysToDday}}D:{{hoursToDday}}H:{{minutesToDday}}M:{{secondsToDday}}S
 </div>
