--- a/src/app/pages/pedidos/pedidos.component.html
+++ b/src/app/pages/pedidos/pedidos.component.html
@@ -33,7 +33,10 @@
                             [ngClass]="order.estado === 'procesada'? 'text-black':order.estado === 'asignada'?
                         'text-white':order.estado === 'en ruta'?'text-black':order.estado === 'en el sitio'?
                         'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
-                                
+                            <app-count-down 
+                                [deliveryDate] = "order.deliveryDate"
+                                [orderType] = 1
+                            ></app-count-down>
                             </div>
                             
                             </div>
@@ -71,7 +74,10 @@
                             [ngClass]="order.estado === 'procesada'? 'text-black':order.estado === 'asignada'?
                         'text-white':order.estado === 'en ruta'?'text-black':order.estado === 'en el sitio'?
                         'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
-                                00:23:18
+                                <app-count-down 
+                                    [deliveryDate] = "order.deliveryDate"
+                                    [orderType] = "2"
+                                ></app-count-down>
                             </div>
                             
                             </div>
@@ -111,9 +117,11 @@
                             [ngClass]="order.estado === 'procesada'? 'text-black':order.estado === 'asignada'?
                         'text-white':order.estado === 'en ruta'?'text-black':order.estado === 'en el sitio'?
                         'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
-                        <!--<ctimer-countdown-timer
-                        [finishDateString]="'2022-10-31 20:30:00'"
-                        ></ctimer-countdown-timer>-->
+                            <app-count-down 
+                                [deliveryDate] = "order.deliveryDate"
+                                [orderType] = 4
+                            ></app-count-down>
+                            
                             </div>
                             
                             </div>
@@ -154,6 +162,7 @@
                         'text-black':order.estado === 'entregado'?'text-black':order.estado === 'emergencia'?'text-white':order.estado === 'programado'?'text-white':''">
                             <app-count-down 
                                 [deliveryDate] = "order.deliveryDate"
+                                [orderType] = 3
                             ></app-count-down>
                                 
                             </div>
