--- a/src/app/pages/navsm/navsm.component.html
+++ b/src/app/pages/navsm/navsm.component.html
@@ -21,6 +21,9 @@
           <li class="nav-item" *ngIf="userType ===3">
             <a class="nav-link" routerLink="/biker">Asignadas</a>
           </li>
+          <li class="nav-item" *ngIf="userType ===1">
+            <a class="nav-link" routerLink="/enterprise">Empresas</a>
+          </li>
           <li class="nav-item align-end" *ngIf="userType >0">
             
           </li>
