--- a/src/app/pages/storedAssigments/storedAssigments.component.html
+++ b/src/app/pages/storedAssigments/storedAssigments.component.html
@@ -7,7 +7,7 @@
         <ng-template #rt let-r="result" let-t="term" >
         <!--<img [src]="'https://upload.wikimedia.org/wikipedia/commons/thumb/' + r['flag']" class="me-1" style="width: 16px">-->
         <span class="material-icons">motorcycle</span>
-        <ngb-highlight [result]="r.nombre" [term]="t" (click)="add(trim(r))"></ngb-highlight>
+        <ngb-highlight [result]="r.nombre" [term]="t" (click)="add(r)"></ngb-highlight>
         </ng-template>
         
         <div class="mb-3 row">
