lista empresas socket

--- a/src/app/pages/navsm/navsm.component.html
+++ b/src/app/pages/navsm/navsm.component.html
@@ -24,6 +24,9 @@
           <li class="nav-item" *ngIf="userType ===1">
             <a class="nav-link" routerLink="/enterprise">Empresas</a>
           </li>
+          <li class="nav-item" *ngIf="userType ===1">
+            <a class="nav-link" routerLink="/updatepassword">Actualizar contraseñas</a>
+          </li>
           <li class="nav-item align-end" *ngIf="userType >0">
             
           </li>
