--- a/src/app/pages/coordinadores/coordinadores.component.html
+++ b/src/app/pages/coordinadores/coordinadores.component.html
@@ -10,7 +10,7 @@
         </ng-template>
         
         <div class="mb-3 row">
-        <label for="typeahead-template" class="col-md-12 col-sm-auto col-form-label fs-5">Buscar motorista:</label>
+        <label for="typeahead-template" class="col-md-12 col-sm-auto col-form-label fs-5">Buscar Usuario:</label>
         <div class="col">
             <input id="typeahead-template" type="text" class="form-control col-md-12" [(ngModel)]="model" [ngbTypeahead]="search" [resultTemplate]="rt"
             [inputFormatter]="formatter"/>
