--- a/src/app/pages/biker/biker.component.html
+++ b/src/app/pages/biker/biker.component.html
@@ -17,7 +17,10 @@
                 {{orderBiker.nombre}}
             </div>
             <div class="col-6 text-end">
-                00:23:12
+                <app-count-down 
+                    [deliveryDate] = "orderBiker.deliveryDate"
+                    [orderType] = orderBiker.tipo_orden
+                ></app-count-down>
             </div>
             <div class="col-12">
                 Dirección de Entrega
